More visual tweaks

--- a/main.css
+++ b/main.css
@@ -7,9 +7,20 @@ body {
 
 
 header {
-    background-color: #dac439;
+    background-color: #b72525;
     color: rgb(255, 255, 255);
-    padding: 10px 0;
+    padding: 10px 0 0 0;
+}
+
+#button-container {
+    margin: 0 0 0 0;
+    justify-content: center;
+    gap: 10px;
+    background-color: #3d73a2;
+}
+
+main {
+    margin: 10px auto;
 }
 
 #box {
@@ -17,7 +28,9 @@ header {
     grid-template-columns: .25fr 1fr .25fr;
     align-items: center;
     justify-items: center;
-    background-color: #fff;
+    background-color: #343434;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 #left-box, #right-box {
@@ -28,23 +41,19 @@ header {
 button {
     padding: 10px 20px;
     font-size: 16px;
+    color: #fff;
+    border: none;
     cursor: pointer;
-    background-color: #7aaddb;
+    background-color: #3b6d99;
     border-radius: .25em;
 }
 
-#button-container {
-    margin: 0 0 20px 0;
-    justify-content: center;
-    gap: 10px;
-    background-color: #3d73a2;
-}
 
 #muppet-image {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 400px;
     object-fit: cover;
-    border: 5px solid #000;
+    border: 3px solid #636363;
     border-radius: 10px;
     background-color: #fff;
 }
